# glyphsObj

./: .coveragerc  README.rst  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
Lib/glyphsLib/: classes.py
Lib/glyphsObj/: __init__.py  classes.py  glyphdata.py  parser.py  types.py  writer.py
tests/: classes_test.py  glyphdata_test.py  parser_test.py  pen_test.py  run_various_tests_on_various_files.py  test_helpers.py  types_test.py  writer_test.py
