[metadata]
name = glyphsObj
description = A library for reading and manipulating Glyphs source files (.glyphs)
long_description = file: README.rst
url = https://github.com/khaledhosny/glyphsObj
author = James Godfrey-Kittle
author_email = jamesgk@google.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based

[options]
package_dir = =Lib
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
    wheel
install_requires =
    # Synchronize with requirements.in until
    # https://github.com/jazzband/pip-tools/issues/1047 is implemented.
    fonttools[unicode] >= 4.6.0
    importlib_resources; python_version < '3.7'

[options.package_data]
glyphsObj.data = *.xml, GlyphData_LICENSE

[options.packages.find]
where = Lib

[bdist_wheel]
universal = 0

[sdist]
formats = zip

[flake8]
select = B, C, E, F, W, T4, B9
ignore = E203, E266, E501, W503, E741
max-line-length = 80
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
